--- a/index.html
+++ b/index.html
@@ -4,19 +4,57 @@
 	<title>Tramass</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+
+	<script src="https://use.fontawesome.com/e96f534223.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	<nav>
+				<a href="#" class="nav-toggle-btn fa fa-bars fa-2x" aria-hidden="true" style="text-decoration:none;" onmouseenter="openMenu()"></a>
+				<ul>
+					<a href="#" class="fa fa-instagram  fa-2x icon"></a>
+					<a href="#" class="fa fa-facebook  fa-2x icon"></a>
+					<a href="#" class=" fa fa-envelope-o  fa-2x icon"></a>
+					<a href="#" class=" fa fa-twitter  fa-2x icon"></a>
+					<li><a href="#" style=" text-decoration:none;" class="a1" >Tramass</a></li>
+					<li><a href="#"style=" text-decoration:none;" class="a1">About project</a></li>
+					<li><a href="#" style=" text-decoration:none;" class="a1">Our Team</a></li>
+					<li><a href="#" style=" text-decoration:none;" class="a1">Contact Us</a></li>
+				</ul>
 
+</nav>
+<section id="home">
+	<div class="row">
+		<div class="content">
+			<h1>HEllow</h1>
+		</div>
+	</div>
 
+</section>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script   src="http://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 <script src="assets/js/jquery-3.1.0.min.js"></script>
+
+<script type="text/javascript">
+		(function ()
+		{		var bodyEl = $('body'),
+				 navToggleBtn = bodyEl.find('.nav-toggle-btn');
+				  navToggleBtns = bodyEl.find('.nav-toggle-btns');
+				 navToggleBtn.on('click', function(e){
+					 bodyEl.toggleClass('active-nav');
+					 e.preventDefault();
+				 });
+		}) ();
+
+
+
+
+</script>
 
 </body>
 </html>
