--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
 	<title>Tramass</title>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-
 	<script src="https://use.fontawesome.com/e96f534223.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<section id="home">
+		<div class="navbar-header ">
+				<a class="navbar-brand" href="#"><span>TRA</span>MASS</a>
+		</div>
 			<a href="#" class="nav-toggle-btn fa fa-bars fa-2x" aria-hidden="true" style="text-decoration:none;"></a>
 		<nav>
 					<a href="#" class="nav-toggle-btns fa fa-bars fa-2x" aria-hidden="true" style="text-decoration:none;"></a>
 					<ul>
-						<li><a href="#" style=" text-decoration:none;" class="a1 li1 active"> Tramass inc.</a></li>
+						<li><a href="#" style=" text-decoration:none;" class="a1 li1 active"> <br>Tramass</a></li>
 						<li><a href="#"style=" text-decoration:none;" class="a1 li2">About project</a></li>
 						<li><a href="#" style=" text-decoration:none;" class="a1 li3">Our Team</a></li>
 						<li><a href="#" style=" text-decoration:none;" class="a1 li4">Contact Us</a></li>
@@ -28,12 +31,56 @@
 					</ul>
 	</nav>
 	<div class="container">
-		<div class="heading">
+		<div class="heading container">
 			<h1><span>	WE MANUFACTURE FURNITURE</span> <br>ACCORDING TO YOUR INDIVIDUAL <br> REQUIREMENTS</h1>
 		</div>
 	</div>
-
-	<a href="#" class=""></a>
+	<div class="arrow">
+			<a href="#" class="fa fa-angle-down fa-4x arrows" onmouseenter="slideArrow()" onmouseleave="slideBack()"></a>
+	</div>
+</section>
+<section id="about">
+		<div class="container">
+				<div class="row">
+						<div class="col-md-12 fade_heading">
+							<div class="about">
+								<h2 >What is <b>Tramass?</b></h2>
+							</div>
+						</div>
+						<div class="col-md-12 paragraphs">
+							<div class="col-md-4">
+								<div class="col-md-12 icon">
+									<a  href="#" class="fa fa-pagelines fa-4x head_icon" ></a>
+								</div>
+								<div class="col-md-12 post">
+									<p>
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+									</p>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="col-md-12 icon ">
+									<a  href="#" class="fa fa-envira fa-4x head_icon" ></a>
+								</div>
+									<div class="col-md-12 post">
+										<p>
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+										</p>
+									</div>
+							</div>
+							<div class="col-md-4">
+								<div class="col-md-12 icon">
+									<a  href="#" class="fa fa-tree fa-4x head_icon" ></a>
+								</div>
+								<div class="col-md-12 post">
+									<p>
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+									</p>
+								</div>
+							</div>
+						</div>
+				</div>
+		</div>
 </section>
 
 
@@ -42,77 +89,9 @@
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script   src="http://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 <script src="assets/js/jquery-3.1.0.min.js"></script>
+<script src="assets/js/navbar-home.js"></script>
+<script src="assets/js/about.js"></script>
 
-<script type="text/javascript">
-$(document).ready(function(){
-	$('h1')
-.animate({
-		top:'20px'},
-	550, function() {
-});
-	$('h1 ')
-	.fadeIn(900)
-	$('h1 ')
-
-
-
-});
-
-
-
-
-		(function ()
-		{		var bodyEl = $('body'),
-				 navToggleBtn = bodyEl.find('.nav-toggle-btn');
-					navToggleBtns = bodyEl.find('.nav-toggle-btns');
-				 navToggleBtn.on('click', function(e){
-					 bodyEl.toggleClass('active-nav');
-					 e.preventDefault();
-				 });
-				 navToggleBtns.on('click', function(e){
-					bodyEl.toggleClass('active-nav');
-					e.preventDefault();
-				});
-		}) ();
-		$('.nav-toggle-btn').click(function() {
-		$('.nav-toggle-btn')
-		.fadeOut('fast')
-			$('.nav-toggle-btns')
-		.animate({
-				top:'30px'},
-			700, function() {
-		});
-		$('.a1')
-	.animate({
-			paddingLeft:'50px'},
-		700, function() {
-	});
-
-		$('.icons,ul')
-	.fadeIn('slow')
-	$('.icons')
-
-	});
-
-	$('.nav-toggle-btns').click(function() {
-		$('.nav-toggle-btn')
-		.fadeIn('slow')
-		$('.nav-toggle-btns')
-	.animate({
-			top:'0px'},
-		600, function() {
-	});
-	$('.a1')
-.animate({
-		paddingLeft:'0px'},
-	700, function() {
-});
-$('.icons,ul')
-.fadeOut('slow')
-$('.icons')
-	});
-
-</script>
 
 </body>
 </html>
