--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Tramass</title>
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
@@ -54,7 +55,7 @@
 								</div>
 								<div class="col-md-12 post">
 									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									</p>
 								</div>
 							</div>
@@ -64,7 +65,7 @@
 								</div>
 									<div class="col-md-12 post">
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 										</p>
 									</div>
 							</div>
@@ -74,12 +75,48 @@
 								</div>
 								<div class="col-md-12 post">
 									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									</p>
 								</div>
 							</div>
+
 						</div>
 				</div>
+		</div>
+</section>
+<section id="team">
+		<div class="container">
+			<div class="row">
+				<div class="team">
+						<div class="team_bg">
+						</div>
+						<div class="thirdHeading">
+								<h3>Contact <b>Us</b></h3>
+						</div>
+						<div class="form">
+								<div class="col-md-12 input">
+										<form class="" action="index.html" method="post">
+											<div class="form-group col-md-3">
+															<label for="name">Name</label>
+															<input type="text" name="name" class="form-control" id="name" >
+													</div>
+													<div class="form-group col-md-3">
+																	<label for="surname">Surname</label>
+																	<input type="text" name="name" class="form-control" id="surname" >
+															</div>
+															<div class="form-group col-md-3">
+																			<label for="email">Email</label>
+																			<input type="text" name="email" class="form-control" id="email" >
+															</div>
+															<div class="form-group col-md-9">
+																			<label for="additions">Additions</label>
+																			<textarea name="additions" rows="3" cols="100" class="form-control"></textarea>
+															</div>
+										</form>
+								</div>
+						</div>
+
+			</div>
 		</div>
 </section>
 
